# MAO

./: .gitignore  CHANGELOG.md  MAO.sln  MAO_GenerateESP.py  README.md  VERSION
.github/workflows/: installer.yml  native.yml
Docs/: ANTI_PATTERNS.md  ARCHITECTURE.md  BUILD.md  DESIGN.md  INDEX.md  INVARIANTS.md  P0_PLAN.md  P1_PLAN.md  PERK_TREE_RECON.md
Source/Scripts/: MAO_MCM.psc
assets/: MAO-README.txt  make_banner.sh  make_logo_16x9.sh  nexus-description.bbcode
data/MCM/Config/MAO/: config.json
data/MCM/Settings/: MAO.ini
data/SKSE/Plugins/: MAO.ini
data/Scripts/: MAO_MCM.pex
installer/MAO.Installer/: Commands.Ladders.cs  Commands.Patch.cs  Commands.Sim.cs  Commands.Tiers.cs  MAO.Installer.csproj  Program.cs  SynthesisMeta.json
installer/MAO.Synthesis/: MAO.Synthesis.csproj  Program.cs  SynthesisMeta.json
native/: CMakeLists.txt  plugin.cpp  vcpkg.json
releases/0.19.0/: NOTES.txt
releases/0.20.0/: MAO.synth  NOTES.txt
releases/0.20.1/: NOTES.txt
releases/0.21.0/: NOTES.txt
releases/0.21.1/: NOTES.txt
releases/0.22.0/: NOTES.txt
releases/0.22.1/: NOTES.txt
releases/0.22.2/: NOTES.txt
releases/0.23.0/: NOTES.txt
releases/1.0.0/: NOTES.txt
releases/1.0.1/: NOTES.txt
releases/1.0.2/: NOTES.txt
releases/1.0.3/: NOTES.txt
releases/v0.3.2-p1a/: NOTES.txt  VERSION
releases/v0.4.0-p1b/: NOTES.txt  VERSION
releases/v0.8.2-p1d/: NOTES.txt  VERSION
tools/: compile.sh  deploy_deck.sh  merge_mcm_settings.py  package_deck.sh  release.sh  release_native.sh
